--- a/editor/templates/editor/base.html
+++ b/editor/templates/editor/base.html
@@ -1,6 +1,15 @@
 <head>
     <!-- Include Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+          background-color: #282a36;
+          /* color: #f8f8f2; */
+          font-family: "Ubuntu", sans-serif;
+          font-weight: 300;
+          font-style: normal;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
