--- a/editor/templates/editor/homepage.html
+++ b/editor/templates/editor/homepage.html
@@ -17,19 +17,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/theme/dracula.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-    rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.0.0/mdb.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
+  
   <style>
     body {
       background-color: #282a36;
       color: #f8f8f2;
-      font-family: "Ubuntu", sans-serif;
-      font-weight: 300;
-      font-style: normal;
+      font-family: "Smooch Sans", serif;
+            font-weight: 400;
+            font-style: normal;
     }
 
     .navbar {
@@ -176,9 +176,9 @@
         <a data-mdb-ripple-init type="button" href="{% url 'login' %}" class="btn btn-link px-3 me-2">
           Login
         </a>
-        <button data-mdb-ripple-init type="button" class="btn btn-primary me-3">
+        <a href="{% url 'register' %}" data-mdb-ripple-init type="button" class="btn btn-primary me-3">
           Sign up for free
-        </button>
+        </a>
         {% endif %}
         <!-- Notifications -->
         <div class="dropdown">
