--- a/editor/templates/editor/loginpage.html
+++ b/editor/templates/editor/loginpage.html
@@ -22,6 +22,9 @@
                         <div class="form-group mt-4 text-center">
                             <button type="submit" class="btn btn-primary btn-block">Login</button>
                         </div>
+                        <div class="form-group mt-4 text-center">
+                            <a href="{% url 'register' %}"  class="nav-link btn-block">Register</a>
+                        </div>
                     </form>
                 </div>
             </div>
