--- a/editor/templates/editor/room2.html
+++ b/editor/templates/editor/room2.html
@@ -707,8 +707,6 @@
             } else {
                 lan = 'plaintext';
             }
-            const protocol = window.location.protocol === 'https:' ? 'wss' : 'ws';
-            const socket = new WebSocket(`${protocol}://${window.location.host}/ws/ac/${roomName}/{{userprofile.id}}`);
 
             console.log("Selected Language: {{channel.programing_language}}");
 
@@ -730,6 +728,8 @@
             console.log(lan)
             let debounceTimer;
             let isLocalChange = false;
+            const protocol = window.location.protocol === 'https:' ? 'wss' : 'ws';
+            const socket = new WebSocket(`${protocol}://${window.location.host}/ws/ac/${roomName}/{{userprofile.id}}`);
 
             editor.onDidChangeModelContent(() => {
                 if (!isLocalChange) {
@@ -1010,7 +1010,7 @@
 
 
 
-            const permission_socket = new WebSocket('wss://' + window.location.host + '/ws/permission/' + roomName + '/')
+            const permission_socket = new WebSocket('ws://' + window.location.host + '/ws/permission/' + roomName + '/')
 
             permission_socket.onmessage = function (e) {
                 const data = JSON.parse(e.data);
