--- a/editor/templates/editor/room2.html
+++ b/editor/templates/editor/room2.html
@@ -731,7 +731,9 @@
             let isLocalChange = false;
 
             const protocol = window.location.protocol === 'https:' ? 'wss' : 'ws';
-            const socket = new WebSocket(`${protocol}://${window.location.host}/ws/ac/${roomName}/{{userprofile.id}}`);
+            // const socket = new WebSocket(`${protocol}://${window.location.host}/ws/ac/${roomName}/{{userprofile.id}}`);
+            const socket = new WebSocket(`${protocol}://${window.location.host}/ws/ac/${roomName}/{{ userprofile.id }}/`);
+
             // const socket = new WebSocket('ws://' + window.location.host + '/ws/ac/' + roomName + '/' + "{{userprofile.id}}");
 
 
