--- a/editor/templates/editor/room2.html
+++ b/editor/templates/editor/room2.html
@@ -729,13 +729,8 @@
             console.log(lan)
             let debounceTimer;
             let isLocalChange = false;
-
             const protocol = window.location.protocol === 'https:' ? 'wss' : 'ws';
-            // const socket = new WebSocket(`${protocol}://${window.location.host}/ws/ac/${roomName}/{{userprofile.id}}`);
-            const socket = new WebSocket(`${protocol}://${window.location.host}/ws/ac/${roomName}/{{ userprofile.id }}/`);
-
-            // const socket = new WebSocket('ws://' + window.location.host + '/ws/ac/' + roomName + '/' + "{{userprofile.id}}");
-
+            const socket = new WebSocket(`${protocol}://${window.location.host}/ws/ac/${roomName}/{{userprofile.id}}`);
 
             editor.onDidChangeModelContent(() => {
                 if (!isLocalChange) {
@@ -844,6 +839,7 @@
             const btn = document.getElementById('run-code');
         
 
+            // const socket = new WebSocket('ws://' + window.location.host + '/ws/ac/' + roomName + '/' + "{{userprofile.id}}");
  
 
             socket.onopen = function () {
@@ -1015,7 +1011,8 @@
 
 
 
-            const permission_socket = new WebSocket('ws://' + window.location.host + '/ws/permission/' + roomName + '/')
+            const permission_socket = new WebSocket(`${protocol}://` + window.location.host + '/ws/permission/' + roomName + '/')
+
 
             permission_socket.onmessage = function (e) {
                 const data = JSON.parse(e.data);
