--- a/editor/templates/editor/homepage.html
+++ b/editor/templates/editor/homepage.html
@@ -580,8 +580,9 @@
   <script>
 
 
+    const protocol = window.location.protocol === 'https:' ? 'wss' : 'ws';
 
-    const chat_socket = new WebSocket('ws://' + window.location.host + '/ws/global-chat/' + '{{request.user}}' + '/');
+    const chat_socket = new WebSocket(`${protocol}://` + window.location.host + '/ws/global-chat/' + '{{request.user}}' + '/');
 
 
     chat_socket.onmessage = function (e) {
